--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<h1>test</h1>
+<script src="https://code.highcharts.com/highcharts.src.js"></script>
+<div id="container" style="width:100%; height:400px;"></div>
+<script>
+    var myChart = Highcharts.chart('container', {
+        chart: {
+            type: 'bar'
+        },
+        title: {
+            text: 'Fruit Consumption'
+        },
+        xAxis: {
+            categories: ['Apples', 'Bananas', 'Oranges']
+        },
+        yAxis: {
+            title: {
+                text: 'Fruit eaten'
+            }
+        },
+        series: [{
+            name: 'Jane',
+            data: [1, 0, 4]
+        }, {
+            name: 'John',
+            data: [5, 7, 3]
+        }]
+    });
+</script>
