--- a/index.html
+++ b/index.html
@@ -1,27 +1,146 @@
 <script src="https://code.highcharts.com/highcharts.src.js"></script>
-<div id="container" style="width:100%; height:400px;"></div>
+<div id="container" style="width:1200px; height:800px;"></div>
 <script>
-    var myChart = Highcharts.chart('container', {
+    const data = `eccv,09/18,100,105,776
+acl,08/17,0,27,302
+acl,08/18,31,36,381
+acl,08/19,118,37,720
+naacl,06/18,15,40,330
+naacl,06/19,70,29,451
+icml,06/17,3,46,434
+icml,06/18,24,59,621
+icml,06/19,71,73,773
+cvpr,06/15,0,0,602
+cvpr,06/16,0,2,643
+cvpr,06/17,0,59,783
+cvpr,06/18,83,129,979
+cvpr,06/19,284,138,1294
+nips,12/15,0,0,403
+nips,12/16,0,14,569
+nips,12/17,10,79,679
+nips,12/18,72,121,1009
+iclr,05/18,26,92,337
+iclr,05/19,80,78,502
+iccv,11/17,3,50,621
+emnlp,11/17,4,29,323
+emnlp,11/18,59,43,54`;
+
+    Highcharts.setOptions({
+        colors: ['#7cb5ec', '#f7a35c', '#90ee7e', '#7798BF', '#aacece', '#ff0066',
+            '#eeaaee', '#55BF3B', '#5B5353'],
+    });
+
+    let rows = data.split('\n');
+    for (let i = 0; i < rows.length; i++) {
+        rows[i] = rows[i].split(',');
+    }
+    for (let i = 0; i < rows.length; i++) {
+        for (let j = 2; j < 5; j++) {
+            rows[i][j] = parseInt(rows[i][j]);
+        }
+        rows[i][1] = rows[i][1].split('/');
+        rows[i][1] = Date.UTC("20" + rows[i][1][1], rows[i][1][0] - 1, 1, i);
+    }
+    let confs = [];
+    for (let i = 0; i < rows.length; i++) {
+        confs.push(rows[i][0]);
+    }
+    confs = Array.from(new Set(confs));
+    const colors = Highcharts.getOptions().colors; // get colors
+    const confColors = {};
+    for (let i = 0; i < confs.length; i++) {
+        confColors[confs[i]] = colors[i];
+    }
+
+    let pytorchRaw = {};
+    let tfRaw = {};
+    const initLines = (arr, suff = '') => {
+        for (const i of confs) {
+            arr[i + suff] = [];
+        }
+    };
+
+    initLines(pytorchRaw, '_pt');
+    initLines(tfRaw, '_tf');
+    for (let i = 0; i < rows.length; i++) {
+        pytorchRaw[rows[i][0] + '_pt'].push([rows[i][1], rows[i][2]]);
+        tfRaw[rows[i][0] + '_tf'].push([rows[i][1], rows[i][3]]);
+    }
+    let convertToSeries = (dict, options = {}) => {
+        let arr = [];
+        for (const key in dict) {
+            const baseKey = key.split('_')[0];
+            arr.push({
+                name: key,
+                id: key,
+                data: dict[key],
+                color: confColors[baseKey],
+                ...options
+            });
+        }
+        return arr;
+    };
+    const ptRawSeries = convertToSeries(pytorchRaw, { dashStyle: 'Solid' });
+    const tfRawSeries = convertToSeries(tfRaw, { dashStyle: 'Dash' });
+    for (let i = 0; i < tfRawSeries.length; i++) {
+        tfRawSeries[i].linkedTo = tfRawSeries[i].name + '_pt';
+    }
+    console.log(tfRawSeries);
+
+    let frameworkRaw = Highcharts.chart('container', {
         chart: {
-            type: 'bar'
+            type: 'line',
+            height: '60%',
         },
         title: {
-            text: 'Fruit Consumption'
+            text: 'Pytorch vs Tensorflow'
         },
+        tooltip: {
+            split: true,
+            formatter: function () {
+                const year = new Date(this.x);
+                const conf = this.points[0].series.name.split('_')[0];
+                let getFramework = (s) => {
+                    const suff = s.split('_')[1];
+                    if (suff == 'tf') {
+                        return 'TensorFlow';
+                    } else {
+                        return 'PyTorch';
+                    }
+                };
+                return ['<b>' + conf + ' ' + year.getFullYear() + '</b>'].concat(
+                    this.points ? this.points.map(function (point) {
+                        console.log(point);
+                        return getFramework(point.series.name) + ': ' + point.y;
+                    }) : []
+                );
+                // return '<b>' + name + ' ' + year.getFullYear() + '</b><br>' + '1234';
+            }
+        },
+        legend: {
+            labelFormatter: function () {
+                return this.name.split('_')[0];
+            }
+        },
+        height: '150%',
         xAxis: {
-            categories: ['Apples', 'Bananas', 'Oranges']
+            type: 'datetime',
+            dateTimeLabelFormats: { // don't display the dummy year
+                month: '%e. %b',
+                year: '%b'
+            },
+            title: {
+                text: 'Date'
+            }
         },
         yAxis: {
             title: {
-                text: 'Fruit eaten'
+                text: '# of unique mentions'
             }
         },
-        series: [{
-            name: 'Jane',
-            data: [1, 0, 4]
-        }, {
-            name: 'John',
-            data: [5, 7, 3]
-        }]
+        series: ptRawSeries.concat(tfRawSeries),
+        credits: {
+            enabled: false
+        }
     });
 </script>
