--- a/index.html
+++ b/index.html
@@ -1,38 +1,124 @@
 <script src="https://code.highcharts.com/highcharts.src.js"></script>
+<script src="https://code.highcharts.com/modules/exporting.js"></script>
+
 <div id="relative" style="width:60%"></div>
 <div id="raw" style="width:60%"></div>
 <div id="ratio" style="width:60%"></div>
+<style>
+    @import 'https://code.highcharts.com/css/highcharts.css';
+</style>
 <script>
-    const data = `eccv,09/18,100,105,776
-acl,08/17,0,27,302
-acl,08/18,31,36,381
-acl,08/19,118,37,720
-naacl,06/18,15,40,330
-naacl,06/19,70,29,451
-icml,06/17,3,46,434
-icml,06/18,24,59,621
-icml,06/19,71,73,773
+    (function (H) {
+        H.Legend.prototype.setItemEvents = function (item, legendItem, useHTML) {
+            var legend = this,
+                boxWrapper = legend.chart.renderer.boxWrapper,
+                activeClass = 'highcharts-legend-' + (item.series ? 'point' : 'series') + '-active',
+                hasLinkedSeries = function (item) {
+                    return ((item.linkedSeries && item.linkedSeries.length) ? true : false);
+                },
+                setLinkedSeriesState = function (item, state) {
+                    item.linkedSeries.forEach(function (elem) {
+                        elem.setState(state)
+                    })
+                };
+
+            // Set the events on the item group, or in case of useHTML, the item itself (#1249)
+            (useHTML ? legendItem : item.legendGroup).on('mouseover', function () {
+                if (item.visible) {
+                    item.setState('hover');
+
+                    // Add hover state to linked series
+                    if (hasLinkedSeries(item)) {
+                        setLinkedSeriesState(item, 'hover')
+                    }
+                    // A CSS class to dim or hide other than the hovered series
+                    boxWrapper.addClass(activeClass);
+
+                    /*= if (build.classic) { =*/
+                    legendItem.css(legend.options.itemHoverStyle);
+                    /*= } =*/
+                }
+            })
+                .on('mouseout', function () {
+                    /*= if (build.classic) { =*/
+                    legendItem.css(H.merge(item.visible ? legend.itemStyle : legend.itemHiddenStyle));
+                    /*= } =*/
+
+                    // A CSS class to dim or hide other than the hovered series
+                    boxWrapper.removeClass(activeClass);
+
+
+                    // Remove hover state from linked series
+                    if (hasLinkedSeries(item)) {
+                        setLinkedSeriesState(item)
+                    }
+
+                    item.setState();
+
+
+                })
+                .on('click', function (event) {
+                    var strLegendItemClick = 'legendItemClick',
+                        fnLegendItemClick = function () {
+                            if (item.setVisible) {
+                                item.setVisible();
+                            }
+                        };
+
+                    // Pass over the click/touch event. #4.
+                    event = {
+                        browserEvent: event
+                    };
+
+                    // click the name or symbol
+                    if (item.firePointEvent) { // point
+                        item.firePointEvent(strLegendItemClick, event, fnLegendItemClick);
+                    } else {
+                        H.fireEvent(item, strLegendItemClick, event, fnLegendItemClick);
+                    }
+                });
+        };
+    })(Highcharts)
+
+
+    const data = `
+eccv,09/18,97,95,776
+acl,08/17,0,23,302
+acl,08/18,26,34,381
+acl,08/19,103,33,720
+naacl,06/18,12,34,330
+naacl,06/19,66,21,451
+icml,06/17,3,31,434
+icml,06/18,23,40,621
+icml,06/19,69,53,773
 cvpr,06/15,0,0,602
-cvpr,06/16,0,2,643
-cvpr,06/17,0,59,783
-cvpr,06/18,83,129,979
-cvpr,06/19,284,138,1294
+cvpr,06/16,0,1,643
+cvpr,06/17,0,44,783
+cvpr,06/18,82,116,979
+cvpr,06/19,280,125,1294
 nips,12/15,0,0,403
-nips,12/16,0,14,569
-nips,12/17,10,79,679
-nips,12/18,72,121,1009
-iclr,05/18,26,92,337
-iclr,05/19,80,78,502
-iccv,11/17,3,50,621
-emnlp,11/17,4,29,323
-emnlp,11/18,59,43,549`;
+nips,12/16,0,7,569
+nips,12/17,9,66,679
+nips,12/18,68,88,1009
+iclr,05/18,24,53,337
+iclr,05/19,70,52,502
+iccv,11/17,3,42,621
+emnlp,11/17,4,20,323
+emnlp,11/18,51,36,549
+`;
 
     Highcharts.setOptions({
         colors: ['#7cb5ec', '#f7a35c', '#90ee7e', '#7798BF', '#aacece', '#ff0066',
             '#eeaaee', '#55BF3B', '#5B5353'],
     });
 
-    let rows = data.split('\n');
+    let allRows = data.split('\n');
+    let rows = [];
+    for (const i of allRows) {
+        if (i.length != 0) {
+            rows.push(i);
+        }
+    }
     for (let i = 0; i < rows.length; i++) {
         rows[i] = rows[i].split(',');
     }
@@ -147,7 +233,6 @@ emnlp,11/18,59,43,549`;
                     return this.name.split('_')[0];
                 }
             },
-            height: '150%',
             xAxis: xAxis,
             yAxis: {
                 title: {
@@ -201,7 +286,6 @@ emnlp,11/18,59,43,549`;
                     return this.name.split('_')[0];
                 }
             },
-            height: '150%',
             xAxis: xAxis,
             yAxis: {
                 title: {
@@ -234,7 +318,7 @@ emnlp,11/18,59,43,549`;
         let frameworkRaw = Highcharts.chart('ratio', {
             chart: {
                 type: 'line',
-                height: '60%',
+                height: '70%',
             },
             title: {
                 text: 'Pytorch vs Tensorflow Percentages'
@@ -260,11 +344,10 @@ emnlp,11/18,59,43,549`;
                     return this.name.split('_')[0];
                 }
             },
-            height: '150%',
             xAxis: xAxis,
             yAxis: {
                 title: {
-                    text: '% of papers mentioning'
+                    text: '% of papers mentioning framework'
                 },
                 labels: {
                     formatter: function () {
