--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ emnlp,11/18,51,36,549
                 height: '70%',
             },
             title: {
-                text: '% of PyTorch papers out of total TensorFlow/PyTorch papers'
+                text: '% PyTorch papers out of total TensorFlow/PyTorch papers'
             },
             tooltip: {
                 formatter: function () {
