--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ emnlp,11/18,51,36,549
                 rows[i][j] = parseInt(rows[i][j]);
             }
             rows[i][1] = rows[i][1].split('/');
-            rows[i][1] = Date.UTC("20" + rows[i][1][1], rows[i][1][0] - 1, 1, i * 2);
+            rows[i][1] = Date.UTC("20" + rows[i][1][1], rows[i][1][0] - 1, 1);
         }
         let confs = [];
         for (let i = 0; i < rows.length; i++) {
@@ -160,6 +160,7 @@ emnlp,11/18,51,36,549
                     name: key,
                     id: key,
                     data: dict[key],
+                    findNearestPoint: 'xy',
                     events: {
                         legendItemClick: function () {
                             const curIndex = this.index;
