--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <div id="relative" style="width:60%"></div>
 <div id="raw" style="width:60%"></div>
 <div id="ratio" style="width:60%"></div>
-<h2>For an explanation of the charts/how I gathered the data check out thegradient.</h1>
+<h2>For an explanation of the charts/how I gathered the data check out thegradient (insert link here).</h1>
     <style>
         @import 'https://code.highcharts.com/css/highcharts.css';
     </style>
