--- a/index.html
+++ b/index.html
@@ -193,8 +193,7 @@ emnlp,11/18,51,36,549
         const xAxis = {
             type: 'datetime',
             dateTimeLabelFormats: { // don't display the dummy year
-                month: '%e. %b',
-                year: '%b'
+                year: '%Y'
             },
             title: {
                 text: 'Date'
