--- a/index.html
+++ b/index.html
@@ -83,30 +83,31 @@
 
 
         const data = `
-eccv,09/18,97,95,776
-acl,08/17,0,23,302
-acl,08/18,26,34,381
-acl,08/19,103,33,720
-naacl,06/18,12,34,330
-naacl,06/19,66,21,451
-icml,06/17,3,31,434
-icml,06/18,23,40,621
-icml,06/19,69,53,773
-cvpr,06/15,0,0,602
-cvpr,06/16,0,1,643
-cvpr,06/17,0,44,783
-cvpr,06/18,82,116,979
-cvpr,06/19,280,125,1294
-nips,12/15,0,0,403
-nips,12/16,0,7,569
-nips,12/17,9,66,679
-nips,12/18,68,88,1009
-iclr,05/18,24,53,337
-iclr,05/19,70,52,502
-iccv,11/17,3,42,621
-emnlp,11/17,4,20,323
-emnlp,11/18,51,36,549
+ECCV,09/18,97,95,776
+ACL,08/17,0,23,302
+ACL,08/18,26,34,381
+ACL,08/19,103,33,720
+NAACL,06/18,12,34,330
+NAACL,06/19,66,21,451
+ICML,06/17,3,31,434
+ICML,06/18,23,40,621
+ICML,06/19,69,53,773
+CVPR,06/15,0,0,602
+CVPR,06/16,0,1,643
+CVPR,06/17,0,44,783
+CVPR,06/18,82,116,979
+CVPR,06/19,280,125,1294
+NeurIPS,12/15,0,0,403
+NeurIPS,12/16,0,7,569
+NeurIPS,12/17,9,66,679
+NeurIPS,12/18,68,88,1009
+ICLR,05/18,24,53,337
+ICLR,05/19,70,52,502
+ICCV,11/17,3,42,621
+EMNLP,11/17,4,20,323
+EMNLP,11/18,51,36,549
 `;
+        const defaultShow = ["ICLR", "CVPR", "ACL"]
 
         Highcharts.setOptions({
             colors: ['#7cb5ec', '#f7a35c', '#90ee7e', '#7798BF', '#aacece', '#ff0066',
@@ -220,7 +221,7 @@ emnlp,11/18,51,36,549
                     height: '70%',
                 },
                 title: {
-                    text: '% PyTorch papers out of total TensorFlow/PyTorch papers'
+                    text: '% PyTorch papers of total TensorFlow/PyTorch papers'
                 },
                 tooltip: {
                     formatter: function () {
@@ -265,7 +266,7 @@ emnlp,11/18,51,36,549
             const tfRawSeries = convertToSeries(tfRaw, { dashStyle: 'Dot' });
             for (let i = 0; i < tfRawSeries.length; i++) {
                 tfRawSeries[i].linkedTo = tfRawSeries[i].name.split('_')[0] + '_pt';
-                ptRawSeries[i].visible = ["iclr", "cvpr", "acl"].includes(ptRawSeries[i].name.split('_')[0]);
+                ptRawSeries[i].visible = defaultShow.includes(ptRawSeries[i].name.split('_')[0]);
             }
 
             let frameworkRaw = Highcharts.chart('ratio', {
@@ -274,7 +275,7 @@ emnlp,11/18,51,36,549
                     height: '70%',
                 },
                 title: {
-                    text: 'Pytorch vs Tensorflow Percentages Out of Total Papers'
+                    text: 'PyTorch vs TensorFlow Percentage of Total Papers'
                 },
                 tooltip: {
                     split: true,
@@ -296,7 +297,7 @@ emnlp,11/18,51,36,549
                 xAxis: xAxis,
                 yAxis: {
                     title: {
-                        text: '% of papers mentioning framework'
+                        text: '% of total papers'
                     },
                     labels: {
                         formatter: function () {
@@ -324,7 +325,7 @@ emnlp,11/18,51,36,549
             const tfRawSeries = convertToSeries(tfRaw, { dashStyle: 'Dot' });
             for (let i = 0; i < tfRawSeries.length; i++) {
                 tfRawSeries[i].linkedTo = tfRawSeries[i].name.split('_')[0] + '_pt';
-                ptRawSeries[i].visible = ["iclr", "cvpr", "acl"].includes(ptRawSeries[i].name.split('_')[0]);
+                ptRawSeries[i].visible = defaultShow.includes(ptRawSeries[i].name.split('_')[0]);
             }
 
             let frameworkRaw = Highcharts.chart('raw', {
@@ -333,7 +334,7 @@ emnlp,11/18,51,36,549
                     height: '60%',
                 },
                 title: {
-                    text: 'Pytorch vs Tensorflow Raw Counts'
+                    text: 'PyTorch vs TensorFlow Raw Counts'
                 },
                 tooltip: {
                     split: true,
