--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ EMNLP,11/18,51,36,549
                     height: '70%',
                 },
                 title: {
-                    text: '% PyTorch papers of total TensorFlow/PyTorch papers'
+                    text: '% PyTorch Papers of Total TensorFlow/PyTorch Papers'
                 },
                 tooltip: {
                     formatter: function () {
@@ -275,7 +275,7 @@ EMNLP,11/18,51,36,549
                     height: '70%',
                 },
                 title: {
-                    text: 'PyTorch vs TensorFlow Percentage of Total Papers'
+                    text: 'PyTorch vs TensorFlow % of Total Papers'
                 },
                 tooltip: {
                     split: true,
