remove unnecessary word

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ EMNLP,11/18,51,36,549
                     height: '70%',
                 },
                 title: {
-                    text: '% PyTorch Papers of Total TensorFlow/PyTorch Papers'
+                    text: '% PyTorch Papers of TensorFlow/PyTorch Papers'
                 },
                 tooltip: {
                     formatter: function () {
