fixed sticky tracking

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ EMNLP,11/18,51,36,549
                     height: '70%',
                 },
                 title: {
-                    text: 'PyTorch vs TensorFlow % of Total Papers'
+                    text: 'PyTorch (Solid) vs TensorFlow (Dotted) % of Total Papers'
                 },
                 tooltip: {
                     split: true,
@@ -334,7 +334,7 @@ EMNLP,11/18,51,36,549
                     height: '60%',
                 },
                 title: {
-                    text: 'PyTorch vs TensorFlow Raw Counts'
+                    text: 'PyTorch (Solid) vs TensorFlow (Dotted) Raw Counts'
                 },
                 tooltip: {
                     split: true,
