--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ NeurIPS,12/15,0,0,403
 NeurIPS,12/16,0,7,569
 NeurIPS,12/17,9,66,679
 NeurIPS,12/18,68,88,1009
+NeurIPS,12/19,59,19,1400
 ICLR,05/18,24,53,337
 ICLR,05/19,70,52,502
 ICCV,11/17,3,42,621
