changed naming a bit

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script src="https://code.highcharts.com/highcharts.src.js"></script>
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <h1> PyTorch vs TensorFlow </h1>
-<h2>For an explanation of the charts/how I gathered the data check out thegradient (insert link here).</h1>
+<h2>For an explanation of the charts/how I gathered the data check out my essay on the state of ML frameworks in 2019, published on The Gradient (insert link here).</h1>
     <div id="relative" style="width:60%"></div>
     <div id="ratio" style="width:60%"></div>
     <div id="raw" style="width:60%"></div>
