Added some more breaks between graphs

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <h1> PyTorch vs TensorFlow </h1>
 <h2>For an explanation of the charts/how I gathered the data check out my essay on the state of ML frameworks in 2019, published on The Gradient (insert link here).</h1>
     <div id="relative" style="width:60%"></div>
+    Note: Neurips 2019 was scraped on incomplete data - specifically the 520 (out of 1400) papers that have arxiv links in the Reproducibility Challenge workshop.
+    <br><br>
     <div id="ratio" style="width:60%"></div>
+    <br><br>
     <div id="raw" style="width:60%"></div>
     <style>
         @import 'https://code.highcharts.com/css/highcharts.css';
